kubernetes/monitoring/main/grafana/grafana/https.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
spec:
  parentRefs:
    - name: grafana-public
      sectionName: https
      kind: ListenerSet
    - name: grafana-local
      sectionName: https
      kind: ListenerSet
  hostnames:
    - grafana.${PUBLIC_DOMAIN}
    - grafana.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana-service
          port: 3000
